# galmask

./: LICENSE  README.md  execution_time.py  galaxy_clean.py  setup.cfg  setup.py  show.py
docs/: conf.py  galmask.rst  index.rst  modules.rst  tests.rst
example/: eso43725_G.fits_segment.fits  gal.fits  gal1_G.fits  gal2_R.fits  gal2_orig_segmap_R.fits  kernel.fits  show.py  show1.py  show2.py
galmask/: gal_clean.py  gal_mask.py  galaxy_clean.py  galmask.py  utils.py
tests/: test_gal_clean.py  test_galmask.py  test_utils.py
tests/data/: test_getCenterLabelRegion_segmap.fits  test_getLargestCC_seg_map.fits
