[metadata]
name = galmask
version = 0.1.0
description = "Unsupervised galaxy masking to remove background source detections"
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Yash-10/galmask
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy >= 1.18
    astropy >= 5.0
    photutils >= 1.4.0
    scikit-image >= 0.15.0
    opencv-python >= 4.5.4.0, < 4.5.5.62
    scipy >= 1.6.0
